# StrmCtrl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CHANGELOG.md  copilot-instructions.md
demo/: CMakeLists.txt  README.decode_test.md  README.transcode_h264.md  commons.h  decode_test.cpp  master.cpp  slave.cpp  stream_master.cpp  stream_slave.cpp  transcode_h264.cpp
demo/stream_demo/: stream_master.cpp  stream_slave.cpp
docs/architecture/: ADR-001-signaling-prefix-extension.md
include/strmctrl/: StrmCtrl.h
src/: StrmCtrl.cpp
strmctrl/: CMakeLists.txt  HostBase.cpp  HostBase.h  IMaster.h  ISlave.h  Master.cpp  Master.h  Slave.cpp  Slave.h
strmctrl/codec/: AudioConfig.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  CodecConfig.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
strmctrl/core/: AudioFrame.h  Callbacks.h  Message.h  VideoConfig.h  VideoFrame.h
strmctrl/transport/: RtpReceiver.cpp  RtpReceiver.h  RtpSender.cpp  RtpSender.h  SignalingChannel.cpp  SignalingChannel.h
test/: CMakeLists.txt  MiniTest.h  StrmCtrlTest.cpp  TestUtils.cpp  TestUtils.h  main.cpp
